# CppFactories

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  IRandomGenerator.h  IUserInteraction.h  MathQuiz.cpp  MathQuiz.h  UserInteraction.cpp  main.cpp
src/dummy_app/: IRandomGenerator.h  MathQuiz.cpp  Operation.h  RandomGenerator.cpp  RandomGenerator.h  UserInteraction.h
src/factories/: Factory.h
tests/: CMakeLists.txt  MathQuizTests.cpp  gtest_main.cpp  gtest_playground.cpp  hello_gtest.cpp
tests/mocks/: RandomGeneratorMock.h  UserInteractionMock.h
